Fix bug 390975: when a form that is not an ancestor of a form control is removed, clear the control's mForm pointer if it points to the now-removed form.  r+sr=jst, a=damons